-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
None
-
MSVC 16.11.0 Preview 1
Windows 10 Pro x64 21H1 19043.1023
Configured with:
cmake ..\qt5\ -DFEATURE_developer_build=ON -DCMAKE_BUILD_TYPE=Debug -DBUILD_WITH_PCH=OFF -DQT_BUILD_TESTS=ON
-
-
d5ab0101ffaaa36ccefda80e3a7a1eb5c60070d5 (qt/qtbase/dev)
Exception thrown: read access violation. storage->**bindingStatus** was 0xFFFFFFFFFFFFFFF7.
Stack trace attached.
| For Gerrit Dashboard: QTBUG-94143 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 352298,2 | Avoid use after free in tst_qsequentialanimationgroup | dev | qt/qtbase | Status: MERGED | +2 | 0 |